--- a/Public/chatRoom.html
+++ b/Public/chatRoom.html
@@ -7,7 +7,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="./CSS/chatRoom.css"/>
     <script async src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script src="https://web-game-gamma.vercel.app/socket.io/socket.io.js"></script>
+    <script src="/socket.io/socket.io.js"></script>
 </head>
 
 <body>
