--- a/Public/index.html
+++ b/Public/index.html
@@ -12,7 +12,7 @@
 <body>
   <main id="main_container"></main>
   <script>
-    const socket = io('http://localhost:3003');
+    const socket = io('https://web-game-iota.vercel.app');
     const userNameInLocalStorage = 'userNameInWebgame';
     const roomInfoCookie = 'webGameRoomInfo';
     const formQuestionsForRoomConfiguration = {
