--- a/Public/chatRoom.html
+++ b/Public/chatRoom.html
@@ -31,7 +31,7 @@
 const roomInfoCookie = 'webGameRoomInfo';
 var msgStatus = false;
 var roomConfig = JSON.parse(window.localStorage.getItem(roomInfoCookie)) || {};
-const socket = io('http://localhost:3003');
+const socket = io('https://web-game-orpin.vercel.app');
 const msgBox = document.getElementById('messages');
 
 
